--- a/视频笔记.md
+++ b/视频笔记.md
@@ -27,4 +27,7 @@
 
 ### 关键词typedef
 
-![image-20230412142705291](C:\Users\Scorp1o\AppData\Roaming\Typora\typora-user-images\image-20230412142705291.png)
+test
+
+![image-20230412143500454](assets/image-20230412143500454.png)
+
