函数和指针

--- a/视频笔记.md
+++ b/视频笔记.md
@@ -27,7 +27,52 @@
 
 ### 关键词typedef
 
-test
+![image-20230412143559873](assets/image-20230412143559873.png) 
 
-![image-20230412143500454](assets/image-20230412143500454.png)
+相当于给类型重命名
+
+```c
+typedef unsigned int uint;
+//之后可以用uint代替unsigned int
+```
+
+### 关键词static
+
+![image-20230412143934880](assets/image-20230412143934880.png) 
+
+##### 修饰局部变量
+
+![image-20230412145154063](assets/image-20230412145154063.png) 
+
+##### 修饰全局变量
+
+![image-20230412144841224](assets/image-20230412144841224.png) 
+
+![image-20230412145341026](assets/image-20230412145341026.png) 
+
+##### 修饰静态函数
+
+和修饰全局变量同理
+
+![image-20230412150406665](assets/image-20230412150406665.png) 
+
+### byte(字节)--bit（比特/位）
+
+1kb=1024byte
+
+1byte=8bit
+
+#### 指针
+
+地址也被称为指针
+
+```c
+int a = 10;
+int* p = &a;
+//p是指针变量，存放指针的变量，就是指针变量。
+//*说明p是指针变量
+&a;//取地址，找到a的地址
+*p;//解应用操作符，意思是通过p里的地址，找到a，可以用*p表示a的值，此时*p=10
+*p = 20;//*p表示a的地址，*p=20 a就等于20.
+```
 
