--- a/视频笔记.md
+++ b/视频笔记.md
@@ -25,6 +25,42 @@
 - 引用 ：`Ctrl+Shift+Q`
 - 生成目录：`[TOC]+Enter`
 
+### 转义字符
+
+![image-20230412210748666](assets/image-20230412210748666.png)	
+
+# strlen()
+
+计算字符串 **str** 的长度，直到空结束字符，但不包括空结束字符
+
+## 实例
+
+下面的实例演示了 strlen() 函数的用法。
+
+```c
+#include <stdio.h>
+#include <string.h>
+
+int main ()
+{
+   char str[50];
+   int len;
+
+   strcpy(str, "This is runoob.com");
+
+   len = strlen(str);
+   printf("|%s| 的长度是 |%d|\n", str, len);
+   
+   return(0);
+}
+```
+
+让我们编译并运行上面的程序，这将产生以下结果：
+
+```c
+|This is runoob.com| 的长度是 |18|
+```
+
 ### 关键词typedef
 
 ![image-20230412143559873](assets/image-20230412143559873.png) 
@@ -66,6 +102,8 @@ typedef unsigned int uint;
 
 地址也被称为指针
 
+不管是什么类型的指针，都是创建指针变量，指针变量大小取决于一个地址存放时需要多大空间，32位都是4byte
+
 ```c
 int a = 10;
 int* p = &a;
@@ -74,5 +112,24 @@ int* p = &a;
 &a;//取地址，找到a的地址
 *p;//解应用操作符，意思是通过p里的地址，找到a，可以用*p表示a的值，此时*p=10
 *p = 20;//*p表示a的地址，*p=20 a就等于20.
+```
+
+### 结构体
+
+结构是一些值的集合，这些值称为成员变量。结构的每个成员可以是不同类型的变量。
+
+![image-20230412204615271](assets/image-20230412204615271.png) 
+
+s.name(结构体对象.成员名)
+
+
+
+用指针：
+
+![image-20230412205013914](assets/image-20230412205013914.png) 
+
+```c
+(*ps).name;//等同于
+ps->name;
 ```
 
