--- a/视频笔记.md
+++ b/视频笔记.md
@@ -1,4 +1,4 @@
-### Typora快捷键
+## Typora快捷键
 
 - 加粗： `Ctrl + B`
 - 撤销： `Ctrl + Z`
@@ -25,15 +25,19 @@
 - 引用 ：`Ctrl+Shift+Q`
 - 生成目录：`[TOC]+Enter`
 
-### 转义字符
+## STM32的C语言要求
+
+![image-20230414161055211](assets/image-20230414161055211.png) 
+
+## 转义字符
 
 ![image-20230412210748666](assets/image-20230412210748666.png)	
 
-# strlen()
+## strlen()
 
 计算字符串 **str** 的长度，直到空结束字符，但不包括空结束字符
 
-## 实例
+### 实例
 
 下面的实例演示了 strlen() 函数的用法。
 
@@ -61,7 +65,7 @@ int main ()
 |This is runoob.com| 的长度是 |18|
 ```
 
-### 关键词typedef
+## 关键词typedef
 
 ![image-20230412143559873](assets/image-20230412143559873.png) 
 
@@ -72,7 +76,7 @@ typedef unsigned int uint;
 //之后可以用uint代替unsigned int
 ```
 
-### 关键词static
+## 关键词static
 
 ![image-20230412143934880](assets/image-20230412143934880.png) 
 
@@ -92,13 +96,13 @@ typedef unsigned int uint;
 
 ![image-20230412150406665](assets/image-20230412150406665.png) 
 
-### byte(字节)--bit（比特/位）
+## byte(字节)--bit（比特/位）
 
 1kb=1024byte
 
 1byte=8bit
 
-#### 指针
+## 指针
 
 地址也被称为指针
 
@@ -114,7 +118,7 @@ int* p = &a;
 *p = 20;//*p表示a的地址，*p=20 a就等于20.
 ```
 
-### 结构体
+## 结构体
 
 结构是一些值的集合，这些值称为成员变量。结构的每个成员可以是不同类型的变量。
 
@@ -133,7 +137,63 @@ s.name(结构体对象.成员名)
 ps->name;
 ```
 
-### Switch语句
+## Switch语句
 
 case 后面必须是***整型***，***常量***表达式
 
+## do while
+
+break的使用：
+
+```c
+#include <stdio.h>
+int main()
+{
+    int i = 1;
+    do
+    {
+        if (5 == i)
+            break;//i==5时直接跳出循环，打印1 2 3 4 
+        printf("%d ", i);
+        i = i + 1;
+    } while (i <= 10);
+
+    return 0;
+}
+```
+
+continue的使用：
+
+```c
+#include <stdio.h>
+int main()
+{
+    int i = 1;
+
+    do
+    {
+        if (5 == i)
+            continue;//i==5时continue到do，死循环。打印 1 2 3 4 
+        printf("%d ", i);
+        i = i + 1;
+    } while (i <= 10);
+
+    return 0;
+}
+```
+
+## 函数链式访问
+
+![image-20230414204634509](assets/image-20230414204634509.png)	
+
+**链式函数的条件是：函数有访问值**
+
+printf返回值是打印的字符的个数，比如43，就返回2
+
+最后一个打印43，返回2
+
+第二个打印2，返回1
+
+第一个打印1
+
+所以打印4321
