--- a/视频笔记.md
+++ b/视频笔记.md
@@ -29,13 +29,69 @@
 
 ![image-20230414161055211](assets/image-20230414161055211.png) 
 
+## 数组
+
+#### 一维数组
+
+```c
+type_t   arr_name   [const_n];
+//type_t 是指数组的元素类型
+//const_n 是一个常量表达式，用来指定数组的大小
+```
+
+在C99标准之前， [] 中要给一个常量才可以，不能使用变量。
+
+创建数组时，[]必须时常量
+
+访问数组元素，比如arr[4]，时，[]内可以是变量
+
+##### 数组初始化
+
+![image-20230415135543640](assets/image-20230415135543640.png)	
+
+![image-20230415135749392](assets/image-20230415135749392.png)	
+
+```c
+int arr2[] = {1,2,3,4};
+//{}中有几个元素，就初始化几个
+```
+
+```c
+char arr1[] = "abc";
+char arr2[] = {'a','b','c'};
+//有区别，arr1中有四个元素，a,b,c,\0.
+//arr2中只有a,b,c
+```
+
+char数组如果要打印字符串，数组末尾必须是\0。
+
+##### 数组的访问
+
+[] ，下标引用操作符，数组是使用下标来访问的，下标是从0开始。
+
+sizeof()算数组的大小：
+
+```c
+int arr[]={1,2,3,4,5,6,7,8,9,10}
+int sz = sizeof(arr)/sizeof(arr[0]);
+//sizeof(arr)算出来是40（一个int=4字节），sizeof(arr[0])算出来是4，40/4=10，有10个元素
+```
+
+##### 数组在内存中的储存
+
+仔细观察输出的结果，我们知道，随着数组下标的增长，元素的地址，也在有规律的递增。 由此可以得出结论：数组在内存中是连续存放的。
+
+![image-20230415141750436](assets/image-20230415141750436.png)	
+
+![image-20230415141800236](assets/image-20230415141800236.png)	
+
 ## 转义字符
 
 ![image-20230412210748666](assets/image-20230412210748666.png)	
 
 ## strlen()
 
-计算字符串 **str** 的长度，直到空结束字符，但不包括空结束字符
+计算字符串 **str** 的长度，直到空结束字符，（包括空格和符号）但不包括空结束字符
 
 ### 实例
 
@@ -197,3 +253,23 @@ printf返回值是打印的字符的个数，比如43，就返回2
 第一个打印1
 
 所以打印4321
+
+## 导入静态库.lib
+
+```c
+#pragma comment(lib,"test.lib")
+```
+
+## 函数递归
+
+程序调用自身的编程技巧称为递归（ recursion）。
+
+递归的两个必要条件：存在限制条件，当满足这个限制条件的时候，递归便不再继续。 
+
+每次递归调用之后越来越接近这个限制条件。
+
+
+
+接受一个整型值（无符号），按照顺序打印它的每一位。 例如： 输入：1234，输出 1 2 3 4
+
+![image-20230415132335970](assets/image-20230415132335970.png) 
