--- a/视频笔记.md
+++ b/视频笔记.md
@@ -1,33 +1,68 @@
 ## Typora快捷键
 
 - 加粗： `Ctrl + B`
+
 - 撤销： `Ctrl + Z`
+
 - 字体倾斜 ：`Ctrl+I`
+
 - 下划线：`Ctrl+U`
+
 - 多级标题： `Ctrl + 1~6`
+
 - 有序列表：`Ctrl + Shift + [`
+
 - 无序列表：`Ctrl + Shift + ]`
+
 - 降级快捷键 ：`Tab`
+
 - 升级快捷键：`Shift + Tab`
+
 - 插入链接： `Ctrl + K`
+
 - 插入公式： `Ctrl + Shift + M`
+
 - 行内代码： `Ctrl + Shift + K`
+
 - 插入图片： `Ctrl + Shift + I`
+
 - 返回Typora顶部：`Ctrl+Home`
+
 - 返回Typora底部 ：`Ctrl+End`
+
 - 创建表格 ：`Ctrl+T`
+
 - 选中某句话 ：`Ctrl+L`
+
 - 选中某个单词 ：`Ctrl+D`
+
 - 选中相同格式的文字 ：`Ctrl+E`
+
 - 搜索: `Ctrl+F`
+
 - 搜索并替换 ：`Ctrl+H`
+
 - 删除线 ：`Alt+Shift+5`
+
 - 引用 ：`Ctrl+Shift+Q`
+
 - 生成目录：`[TOC]+Enter`
+
+  ------
+
+  
 
 ## STM32的C语言要求
 
 ![image-20230414161055211](assets/image-20230414161055211.png) 
+
+
+
+
+
+
+
+------
 
 ## 数组
 
@@ -85,9 +120,174 @@ int sz = sizeof(arr)/sizeof(arr[0]);
 
 ![image-20230415141800236](assets/image-20230415141800236.png)	
 
+#### 二维数组
+
+##### 二维数组的创建与初始化
+
+```c
+int arr[3][4] = {1,2,3,4,5};
+//{1,2,3,4}
+//{5,0,0,0}
+//{0,0,0,0}
+int arr[3][4] = {{1,2},{3,4},{5,6}}
+//{1,2,0,0}
+//{3,4,0,0}
+//{5,6,0,0} 
+```
+
+行可以省略，列不能省略
+
+```
+int arr[可以省略][不可以省略]
+```
+
+```c
+int arr[][4] = {{1,2,3,4},{5,6}}
+//{1，2，3，4}
+//{5,6,0,0}
+```
+
+##### 数组的访问
+
+```c
+#include <stdio.h>
+int main()
+{
+	int arr[3][4] = { 1,2,3,4,2,3,4,5,3,4,5,6 };
+	int i = 0;
+
+	for (i = 0; i < 3; i++)
+	{
+		int j = 0;
+		for (j = 0; j < 4; j++)
+		{
+			printf("%d ", arr[i][j]);
+		}
+        printf("\n");
+	}
+
+	return 0;
+}
+```
+
+##### 数组在内存中的储存
+
+其实二维数组在内存中也是连续存储的
+
+![image-20230415160805236](assets/image-20230415160805236.png)	
+
+#### 越界
+
+数组的下规定是从0开始的,如果数组有n个元素,最后一个元素的下标就是n-1。
+所以数组的下标如果小于0,或者大于n-1,就是数组越界访问了,超出了数组合法空间的访问。
+
+#### 数组传参
+
+```c
+int arr[]={1,2,3,4,5,6,7};
+bubble_sort(arr)//冒泡排序
+```
+
+数组传参时，只需要给数组名arr，不需要arr[]。
+
+数组名本质上时：数组首个元素的地址
+
+```c
+// 方法1：错误
+#include <stdio.h>
+void bubble_sort(int arr[])//这里的arr看似是数组，实际是指针变量,int arr[] 表示的依然是一个指针： int *arr 。
+{
+    int sz = sizeof(arr) / sizeof(arr[0]); // 这里计算的不是数组大小，是指针大小,4/4=1
+    int i = 0;
+    for (i = 0; i < sz - 1; i++)
+    {
+        int j = 0;
+        for (j = 0; j < sz - i - 1; j++)
+        {
+            if (arr[j] > arr[j + 1])
+            {
+                int tmp = arr[j];
+                arr[j] = arr[j + 1];
+                arr[j + 1] = tmp;
+            }
+        }
+    }
+}
+int main()
+{
+    int arr[] = {3, 1, 7, 5, 8, 9, 0, 2, 4, 6};
+    bubble_sort(arr); // 是否可以正常排序？
+    int i = 0;
+    for (i = 0; i < sizeof(arr) / sizeof(arr[0]); i++)
+    {
+        printf("%d ", arr[i]);
+    }
+    return 0;
+}
+```
+
+```c
+// 方法2：正确
+#include <stdio.h>
+void bubble_sort(int arr[],int sz)//int arr[] 表示的依然是一个指针： int *arr 
+//void bubble_sort(int *arr,int sz)  同样正确 
+{
+    int i = 0;
+    for (i = 0; i < sz - 1; i++)
+    {
+        int j = 0;
+        for (j = 0; j < sz - i - 1; j++)
+        {
+            if (arr[j] > arr[j + 1])
+            {
+                int tmp = arr[j];
+                arr[j] = arr[j + 1];
+                arr[j + 1] = tmp;
+            }
+        }
+    }
+}
+int main()
+{
+    int arr[] = {3, 1, 7, 5, 8, 9, 0, 2, 4, 6};
+    int sz = sizeof(arr) / sizeof(arr[0]); 
+    bubble_sort(arr,sz); 
+    int i = 0;
+    for (i = 0; i < sizeof(arr) / sizeof(arr[0]); i++)
+    {
+        printf("%d ", arr[i]);
+    }
+    return 0;
+}
+```
+
+#### 数组名是什么？
+
+数组名确实能表示首元素的地址
+
+但是有2个例外：
+
+1. sizeof(数组名)，这里的数组名表示整个数组，计算的是整个数组的大小，单位是字节
+
+2. &数组名，这里的数组名表示整个数组，取出的是整个数组的地址
+
+![image-20230415170825548](assets/image-20230415170825548.png)	
+
+------
+
+
+
+
+
 ## 转义字符
 
 ![image-20230412210748666](assets/image-20230412210748666.png)	
+
+------
+
+
+
+
 
 ## strlen()
 
@@ -121,6 +321,12 @@ int main ()
 |This is runoob.com| 的长度是 |18|
 ```
 
+------
+
+
+
+
+
 ## 关键词typedef
 
 ![image-20230412143559873](assets/image-20230412143559873.png) 
@@ -131,6 +337,12 @@ int main ()
 typedef unsigned int uint;
 //之后可以用uint代替unsigned int
 ```
+
+------
+
+
+
+
 
 ## 关键词static
 
@@ -152,11 +364,23 @@ typedef unsigned int uint;
 
 ![image-20230412150406665](assets/image-20230412150406665.png) 
 
+------
+
+
+
+
+
 ## byte(字节)--bit（比特/位）
 
 1kb=1024byte
 
 1byte=8bit
+
+------
+
+
+
+
 
 ## 指针
 
@@ -173,6 +397,12 @@ int* p = &a;
 *p;//解应用操作符，意思是通过p里的地址，找到a，可以用*p表示a的值，此时*p=10
 *p = 20;//*p表示a的地址，*p=20 a就等于20.
 ```
+
+------
+
+
+
+
 
 ## 结构体
 
@@ -193,9 +423,21 @@ s.name(结构体对象.成员名)
 ps->name;
 ```
 
+------
+
+
+
+
+
 ## Switch语句
 
 case 后面必须是***整型***，***常量***表达式
+
+------
+
+
+
+
 
 ## do while
 
@@ -238,6 +480,12 @@ int main()
 }
 ```
 
+------
+
+
+
+
+
 ## 函数链式访问
 
 ![image-20230414204634509](assets/image-20230414204634509.png)	
@@ -254,11 +502,23 @@ printf返回值是打印的字符的个数，比如43，就返回2
 
 所以打印4321
 
+------
+
+
+
+
+
 ## 导入静态库.lib
 
 ```c
 #pragma comment(lib,"test.lib")
 ```
+
+------
+
+
+
+
 
 ## 函数递归
 
