--- a/视频笔记.md
+++ b/视频笔记.md
@@ -275,9 +275,13 @@ int main()
 
 ------
 
+![image-20230415211151570](assets/image-20230415211151570.png)
 
+​	二维数组的地址是首行的地址（虽然地址和00一样）
 
+二维数组计算有多少行和列
 
+![image-20230415211446512](assets/image-20230415211446512.png)	 
 
 ## 转义字符
 
@@ -533,3 +537,54 @@ printf返回值是打印的字符的个数，比如43，就返回2
 接受一个整型值（无符号），按照顺序打印它的每一位。 例如： 输入：1234，输出 1 2 3 4
 
 ![image-20230415132335970](assets/image-20230415132335970.png) 
+
+## 移位操作符
+
+####  左移操作符
+
+移位规则:左边抛弃、右边补0
+
+![image-20230415212403811](assets/image-20230415212403811.png)	
+
+#### 右移操作符
+
+算术移位：左边用原该值的符号位填充,右边丢弃
+
+![image-20230415212647711](assets/image-20230415212647711.png)	
+
+
+
+##  位操作符
+
+#### 按位与&
+
+全1出1
+
+```c
+0&0=0;   
+0&1=0;    
+1&0=0;     
+1&1=1;
+```
+
+#### 按位或|
+
+全0出0
+
+```c
+0|0=0;   
+0|1=1;   
+1|0=1;    
+1|1=1;
+```
+
+#### 按位异或^
+
+相同出0，不同出1
+
+```c
+0^0=0;   
+0^1=1;   
+1^0=1;  
+1^1=0;
+```
