--- a/视频笔记.md
+++ b/视频笔记.md
@@ -402,15 +402,35 @@ int* p = &a;
 *p = 20;//*p表示a的地址，*p=20 a就等于20.
 ```
 
+p++  对地址++
+
+(*p)++，解引用，对指向的对象++
+
 ------
 
+##### 指针类型
+
+![image-20230416151316860](assets/image-20230416151316860.png)	
+
+指针的类型决定了指针+1或-1时，跳了几个字节
+
+如果指针类型是int，+1就+4个字节
+
+如果指针类型是char,+1就+1个字节
 
 
 
+##### 指针-指针
+
+指针-指针得到的是，指针和指针之间元素的个数
 
 ## 结构体
 
 结构是一些值的集合，这些值称为成员变量。结构的每个成员可以是不同类型的变量。
+
+结构体声明不能在main函数中
+
+
 
 ![image-20230412204615271](assets/image-20230412204615271.png) 
 
@@ -427,7 +447,13 @@ s.name(结构体对象.成员名)
 ps->name;
 ```
 
-------
+函数结构体传参
+
+
+
+
+
+
 
 
 
