--- a/视频笔记.md
+++ b/视频笔记.md
@@ -424,6 +424,18 @@ p++  对地址++
 
 指针-指针得到的是，指针和指针之间元素的个数
 
+##### 二级指针
+
+二级指针变量是用来存放一级指针变量的地址
+
+![image-20230416203525007](assets/image-20230416203525007.png)	
+
+##### 指针数组
+
+存放指针的数组
+
+![image-20230416205226209](assets/image-20230416205226209.png)	
+
 ## 结构体
 
 结构是一些值的集合，这些值称为成员变量。结构的每个成员可以是不同类型的变量。
